<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/errorLottie"
        android:layout_width="@dimen/_95sdp"
        android:layout_height="@dimen/_95sdp"
        app:lottie_rawRes="@raw/weather_error"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:layout_constraintBottom_toTopOf="@+id/errorTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/errorTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:fontFamily="@font/proxima_nova_soft_bold"
        android:gravity="center"
        android:text="@string/weather_error_title"
        android:textColor="@color/darkGrey"
        android:textSize="@dimen/_19sdp"
        app:layout_constraintBottom_toTopOf="@+id/errorDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorLottie" />

    <TextView
        android:id="@+id/errorDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:fontFamily="@font/proxima_nova_soft_semibold"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toTopOf="@+id/errorButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorTitle"
        tools:text="@string/connection_error" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/errorButton"
        style="@style/AstroWeatherButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_28sdp"
        android:text="@string/weather_error_button"
        android:textSize="@dimen/_15sdp"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>